# SoftwareInteroperability

./: .gitignore  BuildInstructions.txt  CHANGELOG.md  NuGet.config  README-StatisticsLibrary.md  README-StatisticsViewer.md  README-StatsLibScript.md  ReadMe.md  SoftwareInteroperability.sln  StatisticsLibrary.sln  StatisticsViewer.sln
Data/: HouseData.csv  StatsATLCOMTest.xlsm  StatsCLRTest.xlsx  dates.csv  jp_mpg.csv  sma-index.csv  sma.csv  us_jp_mpg.csv  us_mpg.csv  weight.csv  weights.csv  xs.csv  xs1.csv  ys.csv  ys1.csv  ys2.csv
StatisticsConsole/: Program.cs  StatisticalFunctions.cs  StatisticsConsole.csproj
StatisticsLibrary/: StatisticsLibrary.vcxproj  StatisticsLibrary.vcxproj.filters
StatisticsLibraryCoreApp/: App.cpp  Package.appxmanifest  StatisticsLibraryCoreApp.vcxproj  readme.txt
StatisticsLibraryProjection/: StatisticsLibraryProjection.csproj
StatisticsLibraryWRC/: ANOVA.cpp  ANOVA.h  ANOVA.idl  Conversions.cpp  Conversions.h  DataManager.cpp  DataManager.h  DataManager.idl  DataSet.cpp  DataSet.h  DataSet.idl  Directory.Build.props  FTest.cpp  FTest.h  FTest.idl  Statistics.cpp  Statistics.h  Statistics.idl  StatisticsLibraryWRC.vcxproj  StatisticsLibraryWRC.vcxproj.filters  TTest.cpp  TTest.h  TTest.idl  ZTest.cpp  ZTest.h  ZTest.idl  packages.config
StatisticsViewerWinUI/: App.xaml  (+7 more)
StatsLibScript/: Build Commands.md  CMakeLists.txt  StatsLibScript.vcxproj  StatsLibScript.vcxproj.filters
StatsLibScript/lib/: Classes.cpp  Classes.h  Conversion.cpp  Conversion.h  Functions.cpp  Functions.h  module.cpp
StatsLibScript/web/: index.html  styles.css
(+208 files in other folders)
